added blog pages and started styling

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = 'About Me';
 ---
 
 <html lang="en">
@@ -8,14 +8,22 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Homepage</title>
+		<title>{ pageTitle }</title>
+
+		<style>
+			body {
+				background: rgb(235, 206, 235);
+			}
+			
+		
+		</style>
 	</head>
 	<body>
-		<nav>
+    	<nav>
 	  		<a href="/">Home</a>
   			<a href="/about/">About</a>
 			<a href="/blog/">Blog</a>
 		</nav>
-		<h1>Homepage</h1>
+		<h1>{ pageTitle }</h1>
 	</body>
 </html>
