--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,14 +8,18 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Homepage</title>
+		<title>Blog</title>
 	</head>
 	<body>
-		<nav>
+    	<nav>
 	  		<a href="/">Home</a>
   			<a href="/about/">About</a>
-			<a href="/blog/">Blog</a>
+            <a href="/blog/">Blog</a>
 		</nav>
-		<h1>Homepage</h1>
+		<h1>Blog</h1>
+		<ul>
+      		<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 1</a></li>
+    	</ul>
 	</body>
 </html>
